// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with collapse prop 1`] = `
<button
  className="sc-bdVaJa TcyWb"
/>
`;

exports[`renders correctly with disabled prop 1`] = `
<button
  className="sc-bdVaJa bjzVFQ"
  disabled={true}
/>
`;

exports[`renders correctly with expand prop 1`] = `
<button
  className="sc-bdVaJa gurRHR"
/>
`;

exports[`renders correctly with hidden prop 1`] = `
<button
  className="sc-bdVaJa cooDmk"
  hidden={true}
/>
`;

exports[`renders correctly with no props 1`] = `
<button
  className="sc-bdVaJa VffCB"
/>
`;

exports[`renders correctly with secondary prop 1`] = `
<button
  className="sc-bdVaJa duaITt"
/>
`;

exports[`renders correctly with small prop 1`] = `
<button
  className="sc-bdVaJa koAvUR"
/>
`;
